# AdventOfCode2023

./: .gitignore  CMakeLists.txt  README.md
aoc_1/: source.c
lib_include/: errorHandling.h  globalIncludes.h
